# cpu-sim

./: .coverage  LICENSE  Makefile  README.md  pyproject.toml  test_result
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
PM/: README.md
PM/Docs/Design/: Class_Diagrams.md  Data_Flow_Diagram.md  System_Architecture.md
PM/Docs/Reports/: Final_Report.md  Project_Plan.md  Test_Report.md
PM/Docs/Requirements/: ISA_Definition.md  Requirement_Analysis.md  Use_Cases.md
src/: cpu.py  main.py
src/cpu_sim/: cache.py  cpu.py  memory_bus.py
src/cpu_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cpu.py  test_cpu_exec.py  test_main.py  test_parsing.py
