[project]
name = "cpu-sim"
version = "0.1.0"
description = "A Python simulator of a CPU with Cache and Memory Bus, supporting a subset of MIPS instructions."
authors = [
    { name = "Javier Ruiz Galan" }
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8"
]

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
